particle dependency and styled the heading text for responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"
     />
     <link rel="stylesheet" href="./fonts.css" />
+    <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
